Add mixin background color

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -16,3 +16,7 @@
 @mixin font-line-height($height) {
   line-height: $height;
 }
+
+@mixin background-color() {
+  background-color: $secondBackground;
+}
