--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,1 @@
-/*# sourceMappingURL=main.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;500&family=Oswald&display=swap");/*# sourceMappingURL=main.css.map */
