--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,22 +1,59 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;500&family=Oswald&display=swap');
 
-@mixin fonts {
-  font-family: 'Barlow Condensed', sans-serif;
+@mixin titre {
   font-family: 'Oswald', sans-serif;
+  font-size: 9.6rem;
 }
 
-@mixin font-size($size) {
-  font-size: $size;
+@mixin titre-section {
+  font-family: 'Oswald', sans-serif;
+  font-size: 6.4rem;
 }
 
-@mixin font-weight($weight) {
-  font-weight: $weight;
+@mixin sous-titre {
+  font-family: 'Barlow Condensed', sans-serif;
+  font-size: 4.8rem;
 }
 
-@mixin font-line-height($height) {
-  line-height: $height;
+@mixin titre-paragraph {
+  font-family: 'Barlow Condensed', sans-serif;
+  font-size: 4.8rem;
 }
 
-@mixin background-color() {
+@mixin paragraph {
+  font-family: 'Barlow Condensed', sans-serif;
+  font-size: 2.4rem;
+}
+
+@mixin titre-mobile {
+  font-family: 'Oswald', sans-serif;
+  font-size: 3.6rem;
+}
+
+@mixin sous-titre-mobile {
+  font-family: 'Barlow Condensed', sans-serif;
+  font-size: 2.4rem;
+}
+
+@mixin titre-paragraph-mobile {
+  font-family: 'Barlow Condensed', sans-serif;
+  font-size: 3.2rem;
+}
+
+@mixin paragraph-mobile {
+  font-family: 'Barlow Condensed', sans-serif;
+  font-size: 1.6rem;
+}
+
+// Mixins backgrounds
+@mixin firstBackground() {
+  background-color: $firstBackground;
+}
+
+@mixin secondBackground() {
   background-color: $secondBackground;
+}
+
+@mixin thirdBackground() {
+  background-color: $thirdBackground;
 }
