--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -1,6 +1,6 @@
 // Backgrounds
-$firstBackground: #FEFBE9;
-$secondBackground: #FEFDFB;
+$firstBackground: #FEFDFB;
+$secondBackground: #FEFBE9;
 $thirdBackground:#AB6400;
 
 // UI component backgrounds
