--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,7 @@
 @import "reset";
+@import "colors";
 @import "variables";
 @import "mixins";
 @import "mediaqueries";
+@import "menu";
 @import "base";
