--- a/css/main.css
+++ b/css/main.css
@@ -53,6 +53,10 @@ table {
   border-spacing: 0;
 }
 
+html {
+  font-size: 62.5%;
+}
+
 .creations {
   display: flex;
   flex-direction: column;
@@ -93,10 +97,12 @@ table {
 }
 
 .contact {
+  margin-top: 2rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: #E4DAA6;
 }
 .contact__map iframe {
   width: 80vw;
@@ -116,6 +122,7 @@ table {
 .contact__form {
   width: 80%;
   margin-top: 2rem;
+  margin-bottom: 2rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -132,12 +139,14 @@ table {
 }
 .contact__label {
   margin-top: 2rem;
+  margin-left: 2rem;
   font-family: "Barlow Condensed", sans-serif;
   font-size: 2.4rem;
   color: lightgray;
 }
 .contact__input {
-  width: 100%;
+  margin-left: 2rem;
+  width: 80%;
   border: none;
   border-bottom: 2px solid #AB6400;
 }
@@ -160,4 +169,25 @@ table {
   font-size: 2.4rem;
   color: #4F3422;
   text-align: center;
+}
+
+.footer {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  gap: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Barlow Condensed", sans-serif;
+  font-size: 1.6rem;
+  color: #4F3422;
+}
+.footer__left, .footer__right {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+.footer__left a, .footer__right a {
+  text-decoration: none;
+  color: #4F3422;
 }/*# sourceMappingURL=main.css.map */
