--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -1,7 +1,7 @@
 // Backgrounds
 $firstBackground: #FEFBE9;
 $secondBackground: #FEFDFB;
-$thirdBackground:#AB6400;
+$thirdBackground:#9C7232;
 
 // UI component backgrounds
 $componentBackground: #F0F0F3;
