--- a/css/main.css
+++ b/css/main.css
@@ -108,6 +108,18 @@ table {
   padding-left: 2rem;
 }
 
+@media screen and (min-width: 640px) {
+  .navigation__burger::before {
+    display: none;
+  }
+  .navigation__items {
+    height: inherit;
+    background-color: none;
+    flex-direction: row;
+    left: 0;
+    align-items: center;
+  }
+}
 html {
   font-size: 62.5%;
 }
@@ -130,6 +142,8 @@ body {
   font-family: "Oswald", sans-serif;
   font-size: 3.6rem;
   color: #4F3422;
+  width: 90%;
+  flex-wrap: wrap;
   margin-bottom: 5rem;
   font-weight: 500;
 }
