ajout des bijoux

--- a/css/main.css
+++ b/css/main.css
@@ -338,6 +338,9 @@ body {
   color: #4F3422;
 }
 
+.creations {
+  position: relative;
+}
 @media screen and (min-width: 1024px) {
   .creations__title {
     margin-top: 4rem;
@@ -363,5 +366,33 @@ body {
   .creations__image {
     width: 30vw;
     height: 20vw;
+  }
+  .creations__aigue {
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: -1;
+  }
+  .creations__peridot {
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+  }
+  .creations__tanzanite {
+    display: block;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    z-index: -1;
+  }
+  .creations__spinelle {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
   }
 }/*# sourceMappingURL=main.css.map */
