--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -1,4 +1,5 @@
 .creations {
+    position: relative;
     @media screen and (min-width: 1024px) {
         &__title {
             margin-top: 4rem;
@@ -23,6 +24,34 @@
         &__image {
             width: 30vw;
             height: 20vw;
+        }
+        &__aigue {
+            display: block;
+            position: absolute;
+            top: 0;
+            right: 0;
+            z-index: -1;
+        }
+        &__peridot {
+            display: block;
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            z-index: -1;
+        }
+        &__tanzanite {
+            display: block;
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            z-index: -1;
+        }
+        &__spinelle {
+            display: block;
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: -1;
         }
     }
 }
