--- a/css/main.css
+++ b/css/main.css
@@ -102,22 +102,38 @@ table {
   top: 0;
   transition: left 1s;
   font-family: "Barlow Condensed", sans-serif;
-  font-size: 4.8rem;
+  font-size: 2.4rem;
 }
 .navigation__item {
   padding-left: 2rem;
 }
+.navigation a {
+  text-decoration: none;
+  color: #FEFBE9;
+}
 
 @media screen and (min-width: 640px) {
+  .navigation__logo {
+    width: 15vw;
+  }
   .navigation__burger::before {
     display: none;
   }
   .navigation__items {
+    width: 95vw;
     height: inherit;
-    background-color: none;
+    background-color: transparent;
+    color: #AB6400;
     flex-direction: row;
     left: 0;
     align-items: center;
+    justify-content: flex-end;
+    padding-right: 1rem;
+    font-family: "Barlow Condensed", sans-serif;
+    font-size: 3.2rem;
+  }
+  .navigation a {
+    color: #AB6400;
   }
 }
 html {
