--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;500&family=Oswald&display=swap');
 
+// Desktop
 @mixin titre {
   font-family: 'Oswald', sans-serif;
   font-size: 9.6rem;
@@ -25,6 +26,28 @@
   font-size: 2.4rem;
 }
 
+// Tablette
+@mixin titre-tablette {
+  font-family: 'Oswald', sans-serif;
+  font-size: 5.6rem;
+}
+
+@mixin sous-titre-tablette {
+  font-family: 'Barlow Condensed', sans-serif;
+  font-size: 3.2rem;
+}
+
+@mixin titre-paragraph-tablette {
+  font-family: 'Barlow Condensed', sans-serif;
+  font-size: 4.8rem;
+}
+
+@mixin paragraph-tablette {
+  font-family: 'Barlow Condensed', sans-serif;
+  font-size: 2.4rem;
+}
+
+// Mobile
 @mixin titre-mobile {
   font-family: 'Oswald', sans-serif;
   font-size: 3.6rem;
