--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -1,6 +1,29 @@
-.creations {
-    position: relative;
-    @media screen and (min-width: 1024px) {
+// Tablette
+@media screen and (min-width: 640px) {
+    .header {
+        &__title {
+            @include titre-tablette;
+            width: 90%;
+            margin-bottom: 5rem;
+            span {
+                border-bottom: $solidBackground 4px solid;
+            }
+        }
+        &__subtitle {
+            @include sous-titre-tablette;
+            width: 90%;
+            span {
+                display: block;
+                margin-top: 5rem;
+            }
+        }
+    }
+}
+
+// Desktop
+@media screen and (min-width: 1024px) {
+    .creations {
+        position: relative;
         &__title {
             margin-top: 4rem;
             @include titre-section;
