Add footer left side, right side tablet

--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -18,6 +18,22 @@
             }
         }
     }
+
+    .footer {
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        height: 15vh;
+        width: 100vw;
+
+        &__left {
+            margin-left: 5rem;
+        }
+
+        &__right {
+            margin-right: 5rem;
+        }
+    }
 }
 
 // Desktop
