--- a/css/main.css
+++ b/css/main.css
@@ -388,6 +388,19 @@ body {
     display: block;
     margin-top: 5rem;
   }
+  .footer {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    height: 15vh;
+    width: 100vw;
+  }
+  .footer__left {
+    margin-left: 5rem;
+  }
+  .footer__right {
+    margin-right: 5rem;
+  }
 }
 @media screen and (min-width: 1024px) {
   .creations {
