--- a/css/main.css
+++ b/css/main.css
@@ -394,6 +394,8 @@ body {
     align-items: center;
     height: 15vh;
     width: 100vw;
+    font-family: "Barlow Condensed", sans-serif;
+    font-size: 2.4rem;
   }
   .footer__left {
     margin-left: 5rem;
