--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -25,6 +25,7 @@
         align-items: center;
         height: 15vh;
         width: 100vw;
+        @include paragraph-tablette;
 
         &__left {
             margin-left: 5rem;
