--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -1,16 +1,29 @@
+//desktop
 .contact {
     @media screen and (min-width: 1024px) {
         margin-top: 2rem;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        background-color: $contactBackground;
-    
-        &__map iframe {
-            width: 80vw;
-            height: 20vh;
-            margin-top: 2rem;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 4rem;
+
+        &__form {
+            order: -1;
+            flex-basis: 30%;
+            height: 80vh;
+        }
+
+        &__localisation {
+            iframe {
+                width: 30vw;
+                height: 40vh;
+                flex-basis: 1 1 40%;
+            }
+        }
+
+        &__text {
+            margin-bottom: 2rem;
+            @include paragraph;
+            flex: 1 1 100%;
         }
     }
 }
