--- a/css/main.css
+++ b/css/main.css
@@ -348,7 +348,6 @@ body {
   .contact {
     margin-top: 2rem;
     flex-direction: row;
-    flex-wrap: wrap;
     gap: 4rem;
   }
   .contact__form {
@@ -356,15 +355,30 @@ body {
     flex-basis: 30%;
     height: 80vh;
   }
+  .contact__localisation {
+    align-items: flex-start;
+  }
   .contact__localisation iframe {
     width: 30vw;
     height: 40vh;
-    flex-basis: 1 1 40%;
   }
   .contact__text {
+    width: 30vw;
     margin-bottom: 2rem;
     font-family: "Barlow Condensed", sans-serif;
     font-size: 2.4rem;
-    flex: 1 1 100%;
+    font-weight: 500;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+  }
+  .contact__horaires {
+    margin-left: 0;
+  }
+  .contact__adresse {
+    margin-left: 0;
+    width: 100%;
+    text-align: end;
   }
 }/*# sourceMappingURL=main.css.map */
