--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -94,3 +94,14 @@
     }
   }
 }
+
+@media screen and (min-width: 1024px) {
+  .navigation {
+    display: flex;
+    margin-top: 5rem;
+    &__logo {
+      width: 15vw;
+      align-self: center;
+    }
+  }
+}
