--- a/css/main.css
+++ b/css/main.css
@@ -146,6 +146,10 @@ table {
     width: 15vw;
     align-self: center;
   }
+  .navigation__items {
+    font-family: "Barlow Condensed", sans-serif;
+    font-size: 4.8rem;
+  }
 }
 html {
   font-size: 62.5%;
@@ -421,13 +425,12 @@ body {
     justify-content: center;
     align-items: flex-start;
     padding-left: 5rem;
-    flex-wrap: nowrap;
   }
   .header__title {
     font-family: "Oswald", sans-serif;
     font-size: 9.6rem;
     width: auto;
-    padding-bottom: 5rem;
+    padding-bottom: 3rem;
   }
   .header__title span {
     border-bottom: #FFC53D 4px solid;
@@ -439,7 +442,7 @@ body {
   }
   .header__subtitle span {
     display: block;
-    padding-top: 5rem;
+    padding-top: 1rem;
   }
   .creations {
     position: relative;
