--- a/css/main.css
+++ b/css/main.css
@@ -102,14 +102,12 @@ table {
   top: 0;
   transition: left 1s;
   font-family: "Barlow Condensed", sans-serif;
-  font-size: 2.4rem;
-}
-.navigation__item {
-  padding-left: 2rem;
+  font-size: 4.8rem;
 }
 .navigation a {
   text-decoration: none;
   color: #FEFBE9;
+  padding: 2rem;
 }
 
 @media screen and (min-width: 640px) {
@@ -389,44 +387,6 @@ body {
   color: #4F3422;
 }
 
-
-@media screen and (min-width: 1024px) {
-  .contact {
-    margin-top: 2rem;
-    flex-direction: row;
-    gap: 4rem;
-  }
-  .contact__form {
-    order: -1;
-    flex-basis: 30%;
-    height: 80vh;
-  }
-  .contact__localisation {
-    align-items: flex-start;
-  }
-  .contact__localisation iframe {
-    width: 30vw;
-    height: 40vh;
-  }
-  .contact__text {
-    width: 30vw;
-    margin-bottom: 2rem;
-    font-family: "Barlow Condensed", sans-serif;
-    font-size: 2.4rem;
-    font-weight: 500;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-  }
-  .contact__horaires {
-    margin-left: 0;
-  }
-  .contact__adresse {
-    margin-left: 0;
-    width: 100%;
-    text-align: end;
-
 @media screen and (min-width: 640px) {
   .header__title {
     font-family: "Oswald", sans-serif;
@@ -488,6 +448,42 @@ body {
     display: block;
     padding-top: 1rem;
   }
+  .contact {
+    margin-top: 2rem;
+    flex-direction: row;
+    gap: 4rem;
+  }
+  .contact__form {
+    order: -1;
+    flex-basis: 30%;
+    height: 80vh;
+  }
+  .contact__localisation {
+    align-items: flex-start;
+  }
+  .contact__localisation iframe {
+    width: 30vw;
+    height: 40vh;
+  }
+  .contact__text {
+    width: 30vw;
+    margin-bottom: 2rem;
+    font-family: "Barlow Condensed", sans-serif;
+    font-size: 2.4rem;
+    font-weight: 500;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+  }
+  .contact__horaires {
+    margin-left: 0;
+  }
+  .contact__adresse {
+    margin-left: 0;
+    width: 100%;
+    text-align: end;
+  }
   .creations {
     position: relative;
   }
@@ -543,6 +539,5 @@ body {
     top: 0;
     left: 0;
     z-index: -1;
-
   }
 }/*# sourceMappingURL=main.css.map */
