--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -50,17 +50,14 @@
     left: -100vw;
     top: 0;
     transition: left 1s;
-    @include sous-titre-mobile;
-  }
+    @include sous-titre;
 
-  &__item {
-    padding-left:2rem;
   }
 
   a {
     text-decoration: none;
     color: $secondBackground;
-
+    padding: 2rem;
   }
 }
 
